--- a/.env.example
+++ b/.env.example
@@ -20,9 +20,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-VKONTAKTE_CLIENT_ID=6849365
-VKONTAKTE_SECRET=1Y2Tq5X4sttDa5ff6D7O
-VKONTAKTE_REDIRECT_URI=http://dev.pereezd63.ru/vk/ads/auth
+VKONTAKTE_CLIENT_ID=
+VKONTAKTE_SECRET=
+VKONTAKTE_REDIRECT_URI=
 VKONTAKTE_SCOPE=32768
 VKONTAKTE_API_VERSION=5.92
 VKONTAKTE_LOAD_LAYOUTS=false
